# yetty-poc

./: .codacy.yml  CMakeLists.txt  DEPENDENCIES.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
build-tools/cmake/ffmpeg/: CMakeLists.txt
build-tools/cmake/host-tools/: CMakeLists.txt
build-tools/cmake/mupdf/: CMakeLists.txt
build-tools/cmake/python/: CMakeLists.txt
demo/plot-client/: CMakeLists.txt  main.cpp
sandbox/msdf-wgsl/: CMakeLists.txt  README.md
sandbox/msdf-wgsl/compare/: CMakeLists.txt  main.cpp
sandbox/msdf-wgsl/gen-cdb/: CMakeLists.txt  main.cpp
sandbox/msdf-wgsl/include/: msdf-wgsl.h
sandbox/msdf-wgsl/render-atlas/: CMakeLists.txt  main.cpp
sandbox/msdf-wgsl/shaders/: msdf_gen.wgsl
sandbox/msdf-wgsl/src/: msdf-wgsl.cpp
sandbox/msdfgl/: CMakeLists.txt  README.md
sandbox/msdfgl/cmake/: msdfgl-webgpu-config.cmake.in
sandbox/msdfgl/compare/: CMakeLists.txt  main.cpp
sandbox/msdfgl/example/: CMakeLists.txt  main.cpp
sandbox/msdfgl/gen-cdb/: CMakeLists.txt  main.cpp
sandbox/msdfgl/include/: msdfgl.h
sandbox/msdfgl/render-atlas/: CMakeLists.txt  main.cpp
sandbox/msdfgl/shaders/: font_render.wgsl  msdf_gen.wgsl
sandbox/msdfgl/src/: msdfgl.cpp
src/yetty/: CMakeLists.txt  Config.h  Plugin.h  PluginManager.cpp  PluginManager.h  bm-font.cpp  card-buffer-manager.cpp  card-buffer-manager.h  card-factory.cpp  card-factory.h  card-manager.cpp  card-texture-manager.cpp  card.cpp  card.h  cdb-wrapper.cpp  config.cpp  config.h  cursor-renderer.cpp  custom-glyph-plugin.cpp  custom-glyph-plugin.h  damage-rect.h  emoji-atlas.cpp  emoji-atlas.h  emoji.h  font-manager.cpp  font.cpp  frame-renderer.cpp  gpu-allocator.cpp  gpu-buffer-manager.cpp  gpu-memory-manager.cpp  gpu-screen-manager.cpp  gpu-screen.cpp  gpu-screen.h  gpu-texture-manager.cpp  grid-renderer.cpp  grid-renderer.h  grid.cpp  grid.h  hdraw.cpp  imgui-manager.cpp  (+58 more)
src/yetty/base/: CMakeLists.txt  base.h  event-loop.cpp  event-loop.h  event-queue.cpp  event.h  factory.h  types.h
src/yetty/cards/: CMakeLists.txt  hdraw.cpp  hdraw.h  image-card.cpp  image-card.h  image.cpp  image.h  plot-card.cpp  plot-card.h  plot.cpp  plot.h  texture.cpp  texture.h  ydraw.cpp  ydraw.h
src/yetty/client/: CMakeLists.txt  buffers.cpp  buffers.h  cards.cpp  cards.h  commands.h  event.cpp  event.h  main.cpp  ui.cpp  ui.h
src/yetty/diagram/: CMakeLists.txt  diagram-renderer.cpp  diagram-renderer.h  graph-ir.h  layout-engine.h  mermaid-parser.cpp  mermaid-parser.h  sugiyama-layout.cpp  sugiyama-layout.h
src/yetty/font/: CMakeLists.txt  freetype.cpp  raw-font-manager.cpp  raw-font.cpp  util.cpp  util.h
src/yetty/gpu/: CMakeLists.txt  amd-monitor.cpp  amd-monitor.h  gpu-monitor.cpp  gpu-monitor.h  intel-monitor.cpp  intel-monitor.h  nvidia-monitor.cpp  nvidia-monitor.h
src/yetty/msdf-gen/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
src/yetty/msdf-wgsl/: CMakeLists.txt
src/yetty/obsolete/: emoji-atlas.cpp  font-manager.cpp  font.cpp  grid-renderer.cpp  grid-renderer.h  input-handler.h  remote-terminal-backend.h  remote-terminal.cpp  shader-manager.cpp  shared-grid.cpp  terminal-backend.h  terminal-renderer.cpp  terminal-renderer.h  yetty.cpp
src/yetty/platform/: android-platform.cpp  glfw-platform.cpp  web-platform.cpp  windows-platform.cpp
src/yetty/plugins/: CMakeLists.txt  Image.cpp  Image.h  ShaderToy.cpp  ShaderToy.h  Ymery.cpp  Ymery.h  image.cpp  image.h  shader-toy.cpp  shader-toy.h  ymery.cpp  ymery.h
src/yetty/python/: CMakeLists.txt  engine.cpp  engine.h  yetty_card_module.cpp
src/yetty/renderer/: TextRenderer.cpp  WebGPUContext.cpp  shaders.wgsl  text-renderer.cpp  text-renderer.h  webgpu-context.cpp  webgpu-context.h  wgpu-compat.h
src/yetty/rpc/: CMakeLists.txt  event-loop-handler.cpp  rpc-client.cpp  rpc-server.cpp  socket-path.cpp  stream-handler.cpp
src/yetty/shaders/: 1048577-spinner.wgsl  1048578-pulse.wgsl  1048579-wave.wgsl  1048580-fire.wgsl  1048581-gem.wgsl  1048582-heart.wgsl  1048583-party.wgsl  1048584-plasma.wgsl  1048585-ripple.wgsl  1048586-rocket.wgsl  1048587-smiley.wgsl  1048588-sparkle.wgsl  1048589-star.wgsl  1048590-mandelbrot.wgsl  1048591-julia.wgsl  1048592-plot.wgsl  1048593-biomine.wgsl  1048594-minkowski-tube.wgsl  1048595-voronoi.wgsl  1048596-image.wgsl  CMakeLists.txt  gpu-screen.wgsl  (+7 more)
test/ut/: CMakeLists.txt  gpu_screen_test.cpp  main.cpp  plugin_layer_test.cpp  plugin_test.cpp  shared_grid_test.cpp  terminal_content_test.cpp  terminal_moverect_test.cpp  terminal_pen_test.cpp  terminal_scroll_test.cpp  terminal_selection_test.cpp
tools/: CMakeLists.txt  android_x86_64.sh  chrome-webasm.sh  fps.sh  gen-cjk-msdf-font-cdb.sh  gen-ms-msdf-font-cdb.sh  get-cell-size.sh  perf.sh  show-cjk.sh  telnet-websocket.sh  text-to-coverage.py  text-to-raster.py  text-to-vector.py  vnc-websocket.sh
tools/card-runner/: CMakeLists.txt  main.cpp
tools/gpu-info/: CMakeLists.txt  gpu-info.cpp
tools/html2ydraw/: CMakeLists.txt  main.cpp
tools/ladybird/: CLAUDE.md  CMakeLists.txt  DisplayListPlayerYDraw.cpp  DisplayListPlayerYDraw.h  HeadlessPageClient.cpp  HeadlessPageClient.h  LibGfx-stubs.cpp  Makefile  README.md  build-dev.sh  build.sh  displaylist-json.cpp  displaylist-json.h  displaylist-to-ydraw-main.cpp  displaylist-to-ydraw.cpp  displaylist-to-ydraw.h  flake.nix  html-to-displaylist.cpp  http-fetch.h  libweb-to-ydraw.cpp  libweb-to-ydraw.sh.in  main.cpp  ydraw-buffer-standalone.cpp  ydraw-buffer-standalone.h
tools/pdf2ydraw/: CMakeLists.txt  main.cpp
tools/webgpu-test/: CMakeLists.txt  cell-test.cpp  gpu-screen-test.cpp  main.cpp
tools/ybrowser/: CMakeLists.txt  main.cpp
tools/ydraw-generator/: CMakeLists.txt  main.cpp
tools/ydraw-maze/: CMakeLists.txt  main.cpp
tools/ydraw-zoo/: CMakeLists.txt  main.cpp
tools/yetty-client/: encode.py  main.py
tools/yflame/: CMakeLists.txt  flame-renderer.cpp  flame-renderer.h  main.cpp
tools/yhtml-machine/: CMakeLists.txt  main.cpp
tools/ymery/: test.cpp
tools/ymux/: CMakeLists.txt  main.cpp  pane.cpp  pane.h  ymux.cpp  ymux.h
tools/yplayer/: CMakeLists.txt  main.cpp
(+1326 files in other folders)
